# FerrisJIT

./: .gitignore  Cargo.toml  README.md  gen_expr.py  test.csv  vlong.txt
src/: codegen.rs  complex_expr.txt  expr.rs  expr_codegen.rs  main.rs  query.rs  query_codegen.rs
src/codegen/: copy_patch.rs  disassemble.rs  expr_codegen.rs  generated_code.rs  ir.rs  memory_management.rs  mod.rs  result.rs  stencils.rs  types.rs
src/codegen/generator/: mod.rs
src/codegen/generator/copy_patch/: generator.rs  memory_management.rs  mod.rs  stencils.rs
src/codegen/generator/llvm/: generator.rs  mod.rs
src/codegen/llvm/: mod.rs  stencils.rs
