[package]
name = "ferrisjit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
csv = "1.3.0"
goblin = "0.8.0"
iced-x86 = "1.21.0"
inkwell = { version = "0.5.0", features = ["llvm18-0"] }
lazy_static = "1.4.0"
libc = "0.2.153"
nom = { version = "7.1.3", features = ["std"] }
rustyline = "14.0.0"

[features]
dump-stencils = []
print-asm = []

